rev to forms 240