@@ -40,10 +40,6 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-import org.jsoup.select.Elements;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -55,25 +51,46 @@ import net.lingala.zip4j.ZipFile;
 
 public class FormUtils {
 
+  static class FormVersion {
+    String longVersion;
+    String shortVersion;
+
+    @Override
+    public String toString() {
+      return "{long: " + longVersion + ", short: " + shortVersion + ":";
+    }
+
+    FormVersion(String dirName) throws Exception {
+      Path versionPath = Path.of(dirName, "Standard_Forms_Version.dat");
+      File versionFile = versionPath.toFile();
+      if (versionFile.exists()) {
+        longVersion = Files.readString(versionPath).trim();
+        shortVersion = longVersion.substring(0, longVersion.lastIndexOf(".")).replace(".", "");
+      } else {
+        throw new RuntimeException("could not find file: " + versionPath.toAbsolutePath());
+      }
+    }
+  }
+
   private static final Logger logger = LoggerFactory.getLogger(FormUtils.class);
 
-  // this is the format that is in StandardForms/Standard_Forms_Version.dat
-  private static final String LAST_KNOWN_LONG_VERSION = "1.0.141.0";
-
   private final IConfigurationManager cm;
+
+  private final String formsDirName;
   private final File formsDir;
-  private String longVersion = LAST_KNOWN_LONG_VERSION;
-  private String shortVersion;
-  private String updateURL;
-  private boolean formsAlreadyUpdated = false;
+  private final Path formsPath;
+
+  private FormVersion currentVersion;
+  private FormVersion newVersion;
 
   public FormUtils(IConfigurationManager cm) throws Exception {
     this.cm = cm;
 
-    String formsDirName = cm.getAsString(ConfigurationKey.FORMS_PATH);
+    formsDirName = cm.getAsString(ConfigurationKey.FORMS_PATH);
+    formsDir = new File(formsDirName);
+    formsPath = Path.of(formsDir.getCanonicalPath());
 
     boolean needsInitialDownload = false;
-    formsDir = new File(formsDirName);
 
     if (!formsDir.exists()) {
       logger.warn("Forms directory: " + formsDirName + " not found. Creating.");
@@ -96,171 +113,102 @@ public class FormUtils {
       updateForms();
     }
 
-    Path versionPath = Paths.get(formsDirName, "Standard_Forms_Version.dat");
-    File versionFile = versionPath.toFile();
-    if (versionFile.exists()) {
-      longVersion = Files.readString(versionPath).trim();
-    }
-
-    // this chops off the last dotted decimal and removes all dots
-    // this is the format for getting versions
-    shortVersion = makeShortVersion(longVersion);
-
-    logger.info("Forms path: " + formsDir + ", long version: " + longVersion + ", short version: " + shortVersion);
+    currentVersion = new FormVersion(Path.of(formsDirName, "StandardForms").toString());
+    logger
+        .info("Forms path: " + formsDir + ", long version: " + currentVersion.longVersion + ", short version: "
+            + currentVersion.shortVersion);
   }
 
   /**
-   * this chops off the last dotted decimal and removes all dots
-   *
-   * @param s
-   * @return
+   * attempt to download
    */
-  String makeShortVersion(String s) {
-    return s.substring(0, s.lastIndexOf(".")).replace(".", "");
-  }
-
-  /**
-   * get the latest version available
-   *
-   * SIDE EFFECT: sets updateURL
-   *
-   * @return
-   */
-  public String getRemoteLongVersion() {
-    String remoteVersion = null;
-
-    // https://winlink.org/content/how_manually_update_standard_templates_version_10142
-    String urlPrefix = cm.getAsString(ConfigurationKey.FORMS_UPDATE_URL_PREFIX);
-
-    // String localVersion = getVersion(); // 10141
-    // String requestUriString = urlPrefix + localVersion;
-    String requestUriString = urlPrefix;
-    logger.info("checking for new form version via: " + requestUriString);
-
-    try {
-      HttpClient client = HttpClient.newBuilder().followRedirects(Redirect.NORMAL).build();
-
-      HttpRequest request = HttpRequest.newBuilder().uri(URI.create(requestUriString)).build();
-
-      HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-      String responseUriString = response.uri().toURL().toString();
-      String responseBody = response.body();
-      remoteVersion = findRemoteVersion(responseBody);
-      updateURL = findUpdateURL(responseBody);
-      logger
-          .debug(
-              "remoteVersion: " + remoteVersion + ", updateURL: " + updateURL + ", responseURI: " + responseUriString);
-    } catch (Exception e) {
-      logger.error("Error in isFormsUpdateAvailable(): " + e.getMessage(), e);
-    }
-    return remoteVersion;
-  }
-
-  private String findRemoteVersion(String body) {
-    Document doc = Jsoup.parse(body);
-    Elements links = doc.select("a[href]");
-    String magic = cm.getAsString(ConfigurationKey.FORMS_UPDATE_URL_MAGIC, "1drv.ms");
-    for (Element e : links) {
-      String link = e.attr("href");
-      if (link.contains(magic)) {
-        return e.text().trim();
-      }
-    }
-    return null;
-  }
-
-  private String findUpdateURL(String body) {
-    Document doc = Jsoup.parse(body);
-    Elements links = doc.select("a[href]");
-    String magic = cm.getAsString(ConfigurationKey.FORMS_UPDATE_URL_MAGIC, "1drv.ms");
-    for (Element e : links) {
-      String link = e.attr("href");
-      if (link.contains(magic)) {
-        return link;
-      }
-    }
-    return null;
-  }
-
-  /**
-   * update forms, if update available
-   *
-   * @return 0 if nothing to update, 1 if updated
-   */
-  @SuppressWarnings("resource")
   public void updateForms() {
-    if (formsAlreadyUpdated) {
-      logger.info("forms already updated during startup");
-    }
-
-    logger.info("Checking for latest Winlink forms");
-    var currentLongVersion = getLongVersion();
-    logger.info("Currently installed version: " + currentLongVersion);
-
-    String remoteLongVersion = getRemoteLongVersion();
-    logger.info("Latest available version: " + remoteLongVersion);
-
-    if (remoteLongVersion.equals(currentLongVersion)) {
-      logger.info("The installed version is the same as the most current version");
-    }
-
-    boolean okToContinue = Utils
-        .promptForBoolean("Update currently installed forms with version " + remoteLongVersion + "? Default [no]: ");
-    if (!okToContinue) {
-      logger.info("skipping forms update");
+    // attempt to download
+    var ok = downloadForms();
+    if (!ok) {
+      // if we can't download, we can't do anything
       return;
     }
 
+    if (!currentVersion.shortVersion.equals(newVersion.shortVersion)) {
+      boolean okToContinue = Utils
+          .promptForBoolean("Update currently installed forms (version " + currentVersion.shortVersion
+              + ") with new version (" + newVersion.shortVersion + ")? Default [no]: ");
+      if (!okToContinue) {
+        logger.info("skipping forms update");
+        return;
+      }
+
+      try {
+        var linkPath = Path.of(formsPath.toString(), "StandardForms");
+        Files.delete(linkPath);
+        var targetPath = Path.of(formsPath.toString(), "StandardForms-" + newVersion.shortVersion);
+        Files.createSymbolicLink(linkPath, targetPath);
+      } catch (Exception e) {
+        logger.error("Exception unlinking/relinking: " + e.getLocalizedMessage());
+      }
+
+      logger.info("StandardForms updated to " + newVersion.shortVersion);
+    } else {
+      logger.info("StandardForms already at " + newVersion.shortVersion);
+    }
+  }
+
+  /**
+   * download the latest forms from the Winlink site
+   *
+   * @return true if success, false otherwise
+   */
+  @SuppressWarnings("resource")
+  private boolean downloadForms() {
+    var downloadUrl = cm.getAsString(ConfigurationKey.FORMS_DOWNLOAD_URL);
     try {
       HttpClient client = HttpClient.newBuilder().followRedirects(Redirect.NORMAL).build();
-
-      HttpRequest request = HttpRequest.newBuilder().uri(URI.create(updateURL)).build();
-
-      HttpResponse<String> firstResponse = client.send(request, HttpResponse.BodyHandlers.ofString());
-      String responseUriString = firstResponse.uri().toURL().toString();
-      // https://stackoverflow.com/questions/26541705/how-to-download-a-file-from-onedrive-after-using-the-onedrive-picker-to-get-the
-      responseUriString = responseUriString.replace("/redir", "/download");
-      logger.debug("updated responseUriString: " + responseUriString);
-
-      request = HttpRequest.newBuilder().uri(URI.create(responseUriString)).build();
-
-      HttpResponse<byte[]> secondResponse = client.send(request, HttpResponse.BodyHandlers.ofByteArray());
-      byte[] bytes = secondResponse.body();
+      HttpRequest request = HttpRequest.newBuilder().uri(URI.create(downloadUrl)).build();
+      HttpResponse<byte[]> response = client.send(request, HttpResponse.BodyHandlers.ofByteArray());
+      byte[] bytes = response.body();
 
       if (bytes != null && bytes.length > 1_000_000) {
         logger.info("downloaded new forms: " + bytes.length + " bytes");
 
-        // rename existing forms directory
-        String formsDirName = cm.getAsString(ConfigurationKey.FORMS_PATH);
-        File formsDir = new File(formsDirName);
-        String formsParentDirName = formsDir.getParent();
-        File renameDir = new File(formsDir + "-" + getShortVersion());
-        logger.info("rename formsDir from: " + formsDirName + " to: " + renameDir.getName());
-        formsDir.renameTo(renameDir);
-
         // write the bytes to a file
-        Path zipPath = Path.of(formsParentDirName, "StandardForms.zip");
+        Path zipPath = Path.of(formsDir.getCanonicalPath(), "tmp-StandardForms.zip");
         File zipFile = zipPath.toFile();
         FileOutputStream fos = new FileOutputStream(zipFile);
         fos.write(bytes);
         fos.close();
 
         // unzip
-        new ZipFile(zipFile).extractAll(formsDirName);
+        var tmpDirName = Path.of(formsDir.getCanonicalPath(), "tmp-StandardForms").toString();
+        var tmpDir = new File(tmpDirName);
+        boolean makeOk = tmpDir.mkdirs();
+        if (!makeOk) {
+          Utils.fatal(cm, ConfigurationKey.EMSG_CANT_MAKE_FORMS_DIR, formsDirName);
+        }
+        new ZipFile(zipFile).extractAll(tmpDirName);
+
+        // extract new version
+        newVersion = new FormVersion(tmpDirName);
 
         // rename zip
-        Path versionPath = Paths.get(formsDirName, "Standard_Forms_Version.dat");
-        longVersion = Files.readString(versionPath);
-        File renameZipFile = new File(formsDirName + "-" + getLongVersion() + ".zip");
+        String renameZipFileName = Path
+            .of(formsPath.toString(), "StandardForms-" + newVersion.longVersion + ".zip")
+              .toString();
+        File renameZipFile = new File(renameZipFileName);
         zipFile.renameTo(renameZipFile);
-        logger.info("wrote zipped forms file to: " + renameZipFile.getName());
-        logger.info("downloaded new forms, version: " + getLongVersion());
-        formsAlreadyUpdated = true;
-      }
-    } catch (Exception e) {
-      logger.error("Error in updateForms(): " + e.getMessage(), e);
-    }
+        logger.info("wrote zip file to: " + renameZipFile.getName());
 
+        // rename tmpDir
+        var renameTmpDir = new File(formsDir.getCanonicalPath(), "StandardForms-" + newVersion.shortVersion);
+        tmpDir.renameTo(renameTmpDir);
+        logger.info("wrote zipped forms file to: " + renameTmpDir.getName());
+
+      }
+      return true;
+    } catch (Exception e) {
+      logger.error("Exception downloading froms from : " + downloadUrl + ", " + e.getMessage(), e);
+      return false;
+    }
   }
 
   /**
@@ -292,15 +240,4 @@ public class FormUtils {
     return matchingPaths.get(0).toFile().getCanonicalPath();
   }
 
-  public String getLongVersion() {
-    return longVersion;
-  }
-
-  public String getShortVersion() {
-    return shortVersion;
-  }
-
-  public String getUpdateURL() {
-    return updateURL;
-  }
 }
